--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,12 @@ repositories {
 
 dependencies {
   compile('org.springframework:spring-webmvc:4.3.4.RELEASE')
+  compile('com.google.guava:guava:20.0')
+  compile('org.slf4j:slf4j-api:1.7.21')
+  compileOnly('javax.servlet:javax.servlet-api:3.0.1')
+  compileOnly('org.projectlombok:lombok:1.16.12')
+  testCompile('junit:junit:4.12')
+  testCompile('org.assertj:assertj-core:3.6.1')
 }
 
 task wrapper(type: Wrapper) {
